# lab07_demo

./: README.md
aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/launch/: aruco_detection.launch
aruco_detection/src/: aruco_detection.cpp
img_sub/: CMakeLists.txt  package.xml
img_sub/launch/: img_sub_cpp.launch
img_sub/src/: img_sub.cpp
thresholding/: CMakeLists.txt  package.xml
thresholding/launch/: thresholding_cpp.launch  thresholding_py.launch
thresholding/scripts/: thresholding.py
thresholding/src/: thresholding.cpp
virtual_camera/ur_gazebo/launch/: lab7.launch  ur5e_bringup.launch
virtual_camera/ur_gazebo/launch/inc/: load_lab7.launch.xml  load_lab7_5e.launch.xml
virtual_camera/ur_gazebo/urdf/: lab7.gazebo  lab7.xacro  ur.xacro
